--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "James Tariga",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
